改用ubuntu, 避免Text differed by line endings的錯誤

--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -9,7 +9,7 @@ defaults:
     shell: pwsh
 jobs:
   Test-DesktopEdition:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - name: clone repository
         uses: actions/checkout@v3
